# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2017 University of California, Davis
#
# See COPYING for license information.
#
# ----------------------------------------------------------------------
#

subpackage = geocoords
include $(top_srcdir)/subpackage.am

subpkginclude_HEADERS = \
	Converter.hh \
	CoordSys.hh \
	CSCart.hh \
	CSGeo.hh \
	CSPicklerAscii.hh \
	geocoordsfwd.hh

noinst_HEADERS =

# End of file
