# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2023 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------
#

subpackage = geocoords
include $(top_srcdir)/subpackage.am

subpkginclude_HEADERS = \
	Converter.hh \
	CoordSys.hh \
	CSCart.hh \
	CSGeo.hh \
	CSGeoLocal.hh \
	CSPicklerAscii.hh \
	geocoordsfwd.hh

noinst_HEADERS =

# End of file
