# =================================================================================================
# This code is part of SpatialData, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/spatialdata).
#
# Copyright (c) 2010-2024, University of California, Davis and the SpatialData Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

subpackage = geocoords
include $(top_srcdir)/subpackage.am

subpkginclude_HEADERS = \
	Converter.hh \
	CoordSys.hh \
	CSCart.hh \
	CSGeo.hh \
	CSGeoLocal.hh \
	CSPicklerAscii.hh \
	geocoordsfwd.hh

noinst_HEADERS =

# End of file
